single controller methods adjustment + interceptor
